--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -10,7 +10,7 @@
     outline: none;
   }
   &:active {
-  
+
   }
   input {
     -webkit-user-select: initial;
@@ -25,7 +25,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   background-color: $background-default;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif,  PingFang SC,Helvetica Neue,Hiragino Sans GB,Helvetica,Microsoft YaHei,Arial;
+  font-family: STYuanti-SC-Regular, "Roboto", "Helvetica", "Arial", sans-serif,  PingFang SC,Helvetica Neue,Hiragino Sans GB,Helvetica,Microsoft YaHei,Arial;
   box-sizing: border-box;
   #app {
     margin: 0;
