--- a/src/styles/sprite.css
+++ b/src/styles/sprite.css
@@ -64,16 +64,16 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 28px;
   height: 23px;
 }
-.icon-comment-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -145px;
-  width: 28px;
-  height: 24px;
-}
 .icon-Rectangle 2 {
   background-image: url(/static/sprite.png);
-  background-position: 0px -169px;
+  background-position: 0px -145px;
   width: 7px;
+  height: 24px;
+}
+.icon-comment-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -169px;
+  width: 28px;
   height: 24px;
 }
 .icon-view-num {
@@ -106,28 +106,28 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 23px;
   height: 29px;
 }
-.icon-arrow-right {
+.icon-env-good {
   background-image: url(/static/sprite.png);
   background-position: 0px -328px;
+  width: 26px;
+  height: 30px;
+}
+.icon-arrow-right {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -358px;
   width: 17px;
   height: 30px;
 }
 .icon-eye {
   background-image: url(/static/sprite.png);
-  background-position: 0px -358px;
+  background-position: 0px -388px;
   width: 48px;
   height: 30px;
 }
-.icon-env-good {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -388px;
-  width: 26px;
-  height: 30px;
-}
-.icon-food-liked {
+.icon-setting {
   background-image: url(/static/sprite.png);
   background-position: 0px -418px;
-  width: 30px;
+  width: 32px;
   height: 32px;
 }
 .icon-food-disliked {
@@ -136,423 +136,441 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   width: 30px;
   height: 32px;
 }
-.icon-food-dislike {
+.icon-food-like {
   background-image: url(/static/sprite.png);
   background-position: 0px -482px;
   width: 30px;
   height: 32px;
 }
-.icon-food-unlike {
+.icon-food-liked {
   background-image: url(/static/sprite.png);
   background-position: 0px -514px;
   width: 30px;
   height: 32px;
 }
-.icon-food-like {
+.icon-food-unlike {
   background-image: url(/static/sprite.png);
   background-position: 0px -546px;
   width: 30px;
   height: 32px;
 }
-.icon-service-layout {
+.icon-food-dislike {
   background-image: url(/static/sprite.png);
   background-position: 0px -578px;
-  width: 47px;
-  height: 34px;
-}
-.icon-up-arrow {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -612px;
-  width: 34px;
-  height: 34px;
+  width: 30px;
+  height: 32px;
 }
 .icon-building-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -646px;
+  background-position: 0px -610px;
   width: 50px;
-  height: 34px;
-}
-.icon-img {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -680px;
-  width: 48px;
   height: 34px;
 }
 .icon-verification {
   background-image: url(/static/sprite.png);
-  background-position: 0px -714px;
+  background-position: 0px -644px;
   width: 53px;
   height: 34px;
 }
-.icon-my {
+.icon-up-arrow {
   background-image: url(/static/sprite.png);
-  background-position: 0px -748px;
-  width: 32px;
-  height: 35px;
+  background-position: 0px -678px;
+  width: 34px;
+  height: 34px;
+}
+.icon-img {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -712px;
+  width: 48px;
+  height: 34px;
+}
+.icon-service-layout {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -746px;
+  width: 47px;
+  height: 34px;
 }
 .icon-my-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -783px;
+  background-position: 0px -780px;
   width: 32px;
   height: 35px;
 }
+.icon-my {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -815px;
+  width: 32px;
+  height: 35px;
+}
+.icon-building-icon {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -850px;
+  width: 50px;
+  height: 36px;
+}
+.icon-service {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -886px;
+  width: 41px;
+  height: 36px;
+}
 .icon-operation-off {
   background-image: url(/static/sprite.png);
-  background-position: 0px -818px;
+  background-position: 0px -922px;
   width: 62px;
   height: 36px;
 }
 .icon-arrow-left {
   background-image: url(/static/sprite.png);
-  background-position: 0px -854px;
+  background-position: 0px -958px;
   width: 20px;
-  height: 36px;
-}
-.icon-service {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -890px;
-  width: 41px;
-  height: 36px;
-}
-.icon-building-icon {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -926px;
-  width: 50px;
   height: 36px;
 }
 .icon-service-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -962px;
+  background-position: 0px -994px;
   width: 41px;
   height: 36px;
 }
-.icon-home-active {
+.icon-home {
   background-image: url(/static/sprite.png);
-  background-position: 0px -998px;
+  background-position: 0px -1030px;
   width: 39px;
   height: 39px;
 }
 .icon-comment {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1037px;
+  background-position: 0px -1069px;
   width: 45px;
   height: 39px;
 }
-.icon-home {
+.icon-home-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1076px;
+  background-position: 0px -1108px;
   width: 39px;
   height: 39px;
 }
+.icon-authed {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1147px;
+  width: 124px;
+  height: 40px;
+}
 .icon-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1115px;
+  background-position: 0px -1187px;
   width: 35px;
   height: 40px;
 }
 .icon-activity-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1155px;
+  background-position: 0px -1227px;
   width: 35px;
   height: 40px;
 }
 .icon-lock {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1195px;
+  background-position: 0px -1267px;
   width: 36px;
   height: 42px;
 }
 .icon-delivery-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1237px;
+  background-position: 0px -1309px;
   width: 52px;
   height: 45px;
 }
 .icon-delivery-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1282px;
+  background-position: 0px -1354px;
   width: 52px;
   height: 45px;
 }
 .icon-service-delivery {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1327px;
+  background-position: 0px -1399px;
   width: 52px;
   height: 45px;
 }
 .icon-service-delivery-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1372px;
+  background-position: 0px -1444px;
   width: 52px;
   height: 45px;
 }
-.icon-phone {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1417px;
-  width: 32px;
-  height: 46px;
-}
 .icon-service-rent {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1463px;
+  background-position: 0px -1489px;
   width: 48px;
   height: 46px;
 }
 .icon-rent-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1509px;
+  background-position: 0px -1535px;
   width: 48px;
+  height: 46px;
+}
+.icon-phone {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1581px;
+  width: 32px;
+  height: 46px;
+}
+.icon-auth {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -1627px;
+  width: 120px;
   height: 46px;
 }
 .icon-rent-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1555px;
+  background-position: 0px -1673px;
   width: 48px;
   height: 46px;
 }
-.icon-service-express {
+.icon-express-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1601px;
+  background-position: 0px -1719px;
   width: 51px;
   height: 47px;
 }
-.icon-express-icon {
+.icon-service-express {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1648px;
+  background-position: 0px -1766px;
   width: 51px;
   height: 47px;
 }
 .icon-service-express-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1695px;
+  background-position: 0px -1813px;
   width: 51px;
   height: 47px;
 }
 .icon-operation-pause {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1742px;
+  background-position: 0px -1860px;
   width: 27px;
-  height: 48px;
-}
-.icon-operation-tool-up {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -1790px;
-  width: 48px;
   height: 48px;
 }
 .icon-express-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1838px;
+  background-position: 0px -1908px;
   width: 52px;
   height: 48px;
 }
-.icon-blands-icon-active {
+.icon-operation-tool-up {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1886px;
-  width: 46px;
-  height: 52px;
+  background-position: 0px -1956px;
+  width: 48px;
+  height: 48px;
 }
 .icon-blands-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1938px;
+  background-position: 0px -2004px;
+  width: 46px;
+  height: 52px;
+}
+.icon-blands-icon-active {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2056px;
   width: 46px;
   height: 52px;
 }
 .icon-bland-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -1990px;
+  background-position: 0px -2108px;
   width: 46px;
   height: 52px;
 }
 .icon-bland-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2042px;
+  background-position: 0px -2160px;
   width: 46px;
   height: 52px;
 }
 .icon-visitor-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2094px;
-  width: 69px;
-  height: 53px;
-}
-.icon-service-visitor {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -2147px;
+  background-position: 0px -2212px;
   width: 69px;
   height: 53px;
 }
 .icon-service-clean {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2200px;
+  background-position: 0px -2265px;
   width: 50px;
   height: 53px;
 }
 .icon-visitor-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2253px;
+  background-position: 0px -2318px;
   width: 69px;
   height: 53px;
 }
 .icon-service-wash-car {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2306px;
+  background-position: 0px -2371px;
   width: 44px;
+  height: 53px;
+}
+.icon-service-visitor {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -2424px;
+  width: 69px;
   height: 53px;
 }
 .icon-service-park {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2359px;
+  background-position: 0px -2477px;
   width: 54px;
   height: 54px;
 }
 .icon-park-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2413px;
+  background-position: 0px -2531px;
   width: 54px;
   height: 54px;
 }
 .icon-park-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2467px;
+  background-position: 0px -2585px;
   width: 54px;
   height: 54px;
 }
 .icon-service-water {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2521px;
+  background-position: 0px -2639px;
   width: 40px;
   height: 56px;
 }
-.icon-operation-active {
+.icon-operation {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2577px;
+  background-position: 0px -2695px;
   width: 56px;
   height: 57px;
 }
-.icon-operation {
+.icon-operation-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2634px;
+  background-position: 0px -2752px;
   width: 56px;
   height: 57px;
 }
 .icon-tools-icon-active {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2691px;
+  background-position: 0px -2809px;
   width: 56px;
   height: 57px;
 }
 .icon-tools-icon {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2748px;
+  background-position: 0px -2866px;
   width: 56px;
   height: 57px;
 }
-.icon-delete {
+.icon-toast-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2805px;
-  width: 60px;
+  background-position: 0px -2923px;
+  width: 58px;
   height: 60px;
 }
 .icon-success {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2865px;
+  background-position: 0px -2983px;
   width: 58px;
   height: 60px;
 }
 .icon-toast-fail {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2925px;
+  background-position: 0px -3043px;
   width: 60px;
   height: 60px;
 }
-.icon-error {
+.icon-delete {
   background-image: url(/static/sprite.png);
-  background-position: 0px -2985px;
+  background-position: 0px -3103px;
   width: 60px;
   height: 60px;
 }
 .icon-toast-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3045px;
+  background-position: 0px -3163px;
   width: 60px;
-  height: 60px;
-}
-.icon-toast-success {
-  background-image: url(/static/sprite.png);
-  background-position: 0px -3105px;
-  width: 58px;
   height: 60px;
 }
 .icon-warning {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3165px;
+  background-position: 0px -3223px;
+  width: 60px;
+  height: 60px;
+}
+.icon-error {
+  background-image: url(/static/sprite.png);
+  background-position: 0px -3283px;
   width: 60px;
   height: 60px;
 }
 .icon-operation-close {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3225px;
+  background-position: 0px -3343px;
   width: 54px;
   height: 62px;
 }
 .icon-operation-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3287px;
+  background-position: 0px -3405px;
   width: 63px;
   height: 67px;
 }
 .icon-call {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3354px;
+  background-position: 0px -3472px;
   width: 70px;
   height: 70px;
 }
 .icon-operation-pause-on {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3424px;
+  background-position: 0px -3542px;
   width: 64px;
   height: 82px;
 }
 .icon-operation-center {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3506px;
+  background-position: 0px -3624px;
   width: 100px;
   height: 100px;
 }
 .icon-no-activity {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3606px;
+  background-position: 0px -3724px;
   width: 185px;
   height: 172px;
 }
 .icon-rent-img {
   background-image: url(/static/sprite.png);
-  background-position: 0px -3778px;
+  background-position: 0px -3896px;
   width: 240px;
   height: 240px;
 }
 .icon-z13-logo {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4018px;
+  background-position: 0px -4136px;
   width: 1280px;
   height: 256px;
 }
 .icon-404 {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4274px;
+  background-position: 0px -4392px;
   width: 305px;
   height: 279px;
 }
 .icon-operation-tool {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4553px;
+  background-position: 0px -4671px;
   width: 396px;
   height: 396px;
 }
 .icon-operation-tool-open {
   background-image: url(/static/sprite.png);
-  background-position: 0px -4949px;
+  background-position: 0px -5067px;
   width: 396px;
   height: 396px;
 }
